# Smart-Home-Automation-System

./: CMakeLists.txt  README.md  main.cpp
include/SmartHome/Automation/: EnergySavingMode.hpp  SecurityMode.hpp  SupportedAutomationModes.hpp
include/SmartHome/Commands/: DisableNightVisionCommand.hpp  EnableNightVisionCommand.hpp  GroupOffCommand.hpp  GroupOnCommand.hpp  LockCommand.hpp  MacroCommand.hpp  SetBrightnessCommand.hpp  SetTargetTemperatureCommand.hpp  SetThermostatModeCommand.hpp  StartRecordingCommand.hpp  StopRecordingCommand.hpp  SupportedCommands.hpp  TurnOffCommand.hpp  TurnOnCommand.hpp  UnlockCommand.hpp
include/SmartHome/Controllers/: Scheduler.hpp  SmartHomeController.hpp
include/SmartHome/Core/: IAutomationMode.hpp  ICommand.hpp  IDevice.hpp
include/SmartHome/Devices/: DeviceGroup.hpp  DoorLock.hpp  MotionSensor.hpp  SupportedDevices.hpp
include/SmartHome/Factories/: DeviceFactory.hpp
src/Automation/: EnergySavingMode.cpp  SecurityMode.cpp
src/Commands/: DisableNightVisionCommand.cpp  EnableNightVisionCommand.cpp  GroupOffCommand.cpp  GroupOnCommand.cpp  LockCommand.cpp  MacroCommand.cpp  SetBrightnessCommand.cpp  SetTargetTemperatureCommand.cpp  SetThermostatModeCommand.cpp  StartRecordingCommand.cpp  StopRecordingCommand.cpp  TurnOffCommand.cpp  TurnOnCommand.cpp  UnlockCommand.cpp
src/Controllers/: Scheduler.cpp  SmartHomeController.cpp
src/Devices/: DeviceGroup.cpp  DoorLock.cpp  MotionSensor.cpp
src/Factories/: DeviceFactory.cpp
src/Factory/: DeviceFactory.cpp
src/Utils/: Logger.cpp  StringUtils.cpp
(+17 files in other folders)
